# Loca-LLAMA

./: .gitignore  BENCHMARK_COMPARISON.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/rules/: fastapi-patterns.md  python-async.md  testing-strategy.md
.github/workflows/: eslint.yml  hadolint.yml  stale.yml  test.yml
docs/: README.md  TESTING.md
docs/plans/: 2026-03-07-lm-studio-only.md
loca_llama/: __init__.py  __main__.py  analyzer.py  batch_optimizer.py  benchmark.py  benchmark_export.py  benchmark_report.py  benchmark_results.py  benchmark_suite.py  cli.py  code_sandbox.py  eval_benchmarks.py  gpu_optimizer.py  hardware.py  hf_templates.py  hub.py  interactive.py  memory_monitor.py  models.py  proxy_monitor.py  quality_bench.py  quantization.py  runtime.py  scanner.py  sql_bench.py  sql_bench_report.py  templates.py  throughput.py  types.py  unified_report.py
loca_llama/api/: __init__.py  app.py  dependencies.py  schemas.py  state.py
loca_llama/api/routes/: __init__.py  analysis.py  benchmark.py  calculator.py  hardware.py  hub.py  memory.py  models.py  quantization.py  recommend.py  runtime.py  scanner.py  templates.py
rpi/cli-webapp-improvements/implement/: IMPLEMENT.md
rpi/cli-webapp-improvements/plan/: PLAN.md
rpi/loca-llama-v2/: REQUEST.md
rpi/loca-llama-v2/implement/: IMPLEMENT.md
rpi/loca-llama-v2/plan/: PLAN.md  eng.md  pm.md  ux.md
rpi/loca-llama-v2/research/: RESEARCH.md
static/: app.js  index.html  style.css
static/js/: api.js  benchmark.js  calculator.js  chart.js  compat.js  hub.js  local.js  main.js  memory.js  models.js  mymac.js  recommend.js  tabs.js  theme.js  utils.js
tests/: conftest.py  test_analyzer.py  test_benchmark_errors.py  test_benchmark_improvements.py  test_benchmark_results.py  test_cli.py  test_code_sandbox.py  test_core_data.py  test_eval_benchmarks.py  test_memory_monitor.py  test_quality_bench.py  test_runtime_benchmark.py  test_scanner_hub.py  test_sql_bench.py  test_templates.py  test_throughput.py  test_unified_report.py
tests/api/: conftest.py  test_analysis_routes.py  test_benchmark_routes.py  test_calculator_routes.py  test_chart_export_data.py  test_hardware_routes.py  test_hub_routes.py  test_memory_routes.py  test_model_routes.py  test_quant_routes.py  test_recommend_routes.py  test_route_error_handling.py  test_runtime_routes.py  test_scanner_routes.py  test_template_routes.py
