[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loca-llama"
version = "0.1.0"
description = "Local LLM Apple Mac Analyzer — check which LLMs your Mac can run, benchmark speed and quality"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["llm", "apple-silicon", "llama", "mac", "gguf", "mlx", "quantization", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]
dev = [
    "loca-llama[web]",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "coverage>=7.0",
]

[project.scripts]
loca-llama = "loca_llama.cli:main"
loca-llama-ui = "loca_llama.interactive:main_interactive"
loca-llama-web = "loca_llama.api.app:serve"

[tool.setuptools.packages.find]
include = ["loca_llama*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -x"

[tool.coverage.run]
source = ["loca_llama"]
omit = [
    "loca_llama/cli.py",
    "loca_llama/interactive.py",
    "loca_llama/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__",
]
